# ATM_QT

./: .gitignore  README.md
QT/: CMakeLists.txt  QT.qmlproject  qmlmodules
QT/content/: App.qml
QT/headers/: import_qml_plugins.h
QT/imports/: CMakeLists.txt
QT/imports/QT/: CMakeLists.txt  qmldir
QT/imports/QT/designer/: plugin.metainfo
QT/include/: DBManager.h  account.h  atm.h  card.h  customer.h  transaction.h
QT/src/: DBManager.cpp  account.cpp  atm.cpp  card.cpp  customer.cpp  main.cpp  transaction.cpp
